--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,19 +2,18 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width" />
-		<title>Botfessor</title>
+		<title>takethejuice.com</title>
 		<meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible" />
+		<script src="static/vendor/js/jquery-3.1.1.min.js"></script>
 	</head>
 	<body>
 		<header>
-		<h1>Welcome to Botfessor 🤖 📚</h1>
-		<form action="/" method="POST">
-			<input type="text" name="url" placeholder="Insert resource url here!">
-			<button type="submit">Get resource content</button>
-		</form>
+		<h1>Welcome to takethejuice.com</h1>
 		</header>
 		<section id="content">
 			{% block content %}{% endblock %}
 		</section>
+
+		<script src="static/assets/js/app.js"></script>
 	</body>
 </html>
