--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,7 +1,7 @@
-{% extends "layout.html" %}
+{% extends "body.html" %}
 
 {% block content %}
-	<div class="error">
+	<div class="notification is-warning">
 		<p>{{ error }}</p>
 	</div>
 {% endblock %}
