--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block content %}
+{% block body %}
 
 	{% if error %}
 		<div class="error">
@@ -16,4 +16,5 @@
 		</form>
 	</div>
 
+	<script src="static/assets/js/login.js"></script>
 {% endblock %}
