--- a/app/templates/body.html
+++ b/app/templates/body.html
@@ -1,13 +1,14 @@
 {% extends "layout.html" %}
 
 {% block body %}
+
 	<div class="container is-fluid columns">
 		<div class="column">
 			<a href="/">
 				<img src="static/assets/img/logo-h.svg" style="max-width: 250px">
 			</a>
 		</div>
-		<div class="column is-2">
+		<div class="column is-2 has-text-right">
 			<a class="button is-white" href="/logout">
 				<span class="icon is-small">
 					<i class="fa fa-sign-out"></i>
@@ -16,6 +17,7 @@
 			</a>
 		</div>
 	</div>
+
 	<div class="section columns">
 		<div class="container column is-10 is-offset-1">
 			<section id="content" class="columns is-mobile">
@@ -23,6 +25,5 @@
 			</section>
 		</div>
 	</div>
-	<script src="static/assets/js/app.js"></script>
 
 {% endblock %}
