--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -41,30 +41,31 @@
 		</div>
 		<div class="column is-offset-1">
 			<h3 class="title is-3">Choose platform</h3>
-			<a class="box">
+			<label class="box">
+				<input type="radio" name="method" value="facebook" style="visibility: hidden; opacity: 0">
 				<span class="icon is-medium"><i class="fa fa-facebook"></i></span>
 				<span>Facebook Messenger</span>
-			</a>
-			<a class="box">
+			</label>
+			<label class="box" style="opacity: 0.6">
 				<span class="icon is-medium"><i class="fa fa-twitter"></i></span>
 				<span>Twitter</span>
-			</a>
-			<a class="box">
+			</label>
+			<label class="box" style="opacity: 0.6">
 				<span class="icon is-medium"><i class="fa fa-instagram"></i></span>
 				<span>Instagram</span>
-			</a>
-			<a class="box">
+			</label>
+			<label class="box" style="opacity: 0.6">
 				<span class="icon is-medium"><i class="fa fa-telegram"></i></span>
 				<span>Telegram</span>
-			</a>
-			<a class="box">
+			</label>
+			<label class="box" style="opacity: 0.6">
 				<span class="icon is-medium"><i class="fa fa-snapchat-ghost"></i></span>
 				<span>Snapchat</span>
-			</a>
+			</label>
 			<button class="button is-large is-primary is-fullwidth">
 				<span class="icon is-medium"><i class="fa fa-check"></i></span>
 				<span>Prepare content</span>
-			</a>
+			</label>
 		</div>
 	</form>
 {% endblock %}
