--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-	<div id="search-form" class="column is-half is-offset-one-quarter">
+	<div id="search-form" class="column has-text-centered">
 		<form action="/" method="POST">
 			<div class="control is-grouped">
 				<p class="control is-expanded">
-					<input class="input" type="text" name="url" placeholder="Insert resource url here!">
+					<input class="input is-large" type="text" name="url" placeholder="Insert resource url here!">
 				</p>
 				<p class="control">
-					<button type="submit" class="button is-info">
+					<button type="submit" class="button is-large is-primary">
 						<span class="icon is-small">
 							<i class="fa fa-magic"></i>
 						</span>
