--- a/app/templates/body.html
+++ b/app/templates/body.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class="section columns">
-		<div class="container column is-10 is-offset-1">
+		<div class="container column">
 			<section id="content" class="columns is-mobile">
 				{% block content %}{% endblock %}
 			</section>
