New submit button

--- a/app/templates/parse.html
+++ b/app/templates/parse.html
@@ -23,6 +23,14 @@
 
 		<nav id="friend-list" class="panel" style="display: none"></nav>
 	</div>
+	<div class="column is-12 has-text-centered">
+		<button type="submit" class="button is-large is-primary">
+			<span class="icon is-small">
+				<i class="fa fa-paper-plane"></i>
+			</span>
+			<span>Send</span>
+		</button>
+	</div>
 	<script src="static/assets/js/target.js"></script>
 
 {% endblock %}
