--- a/app/templates/body.html
+++ b/app/templates/body.html
@@ -20,7 +20,7 @@
 
 	<div class="section columns">
 		<div class="container column">
-			<section id="content" class="columns is-mobile">
+			<section id="content" class="columns is-mobile is-multiline">
 				{% block content %}{% endblock %}
 			</section>
 		</div>
