--- a/app/templates/body.html
+++ b/app/templates/body.html
@@ -18,7 +18,12 @@
 		</div>
 	</div>
 
-	<div class="section columns">
+	<div class="section columns is-multiline">
+		{% if error %}
+			<div class="column is-12 notification is-warning">
+				<p>{{ error }}</p>
+			</div>
+		{% endif %}
 		<div class="container column">
 			<section id="content" class="columns is-mobile is-multiline">
 				{% block content %}{% endblock %}
