--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -6,7 +6,8 @@
 
 		<title>takethejuice.com</title>
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
+		<link rel="stylesheet" href="static/assets/css/main.css">
+		<!-- link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css" -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<script src="static/vendor/js/jquery-3.1.1.min.js"></script>
