--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,31 @@
 {% extends "layout.html" %}
 
 {% block body %}
+	<div class="section">
+		<div class="container is-fluid columns">
+			<div id="login-form" class="column has-text-centered">
+				<a href="/">
+					<img src="static/assets/img/logo.svg" style="max-width: 250px">
+				</a>
 
-	{% if error %}
-		<div class="error">
-			<p>{{ error }}</p>
+				{% if error %}
+					<div class="error">
+						<p>{{ error }}</p>
+					</div>
+				{% endif %}
+
+				<form method="POST" action="/login">
+					<input type="hidden" id="userid-input" name="userid">
+					<input type="hidden" id="accesstoken-input" name="accesstoken">
+					<button id="login-btn" class="button is-large is-primary">
+						<span class="icon is-medium">
+							<i class="fa fa-facebook"></i>
+						</span>
+						<span>Facebook Login</span>
+					</button>
+				</form>
+			</div>
 		</div>
-	{% endif %}
-
-	<div id="login-form">
-		<form method="POST" action="/login">
-			<input type="hidden" id="userid-input" name="userid">
-			<input type="hidden" id="accesstoken-input" name="accesstoken">
-			<button id="login-btn">Facebook Login</button>
-		</form>
 	</div>
 
 	<script src="static/assets/js/login.js"></script>
