--- a/app/templates/parse.html
+++ b/app/templates/parse.html
@@ -1,30 +1,52 @@
 {% extends "body.html" %}
 
 {% block content %}
-
 	<div class="column is-7">
-	{% for sentence in sentences %}
-		<div class="container" style="margin: .5em 0">
-			<span class="tag is-primary is-large" style="border-radius: 15px; padding: 0.5em 0.875em; height: auto; white-space: normal;">{{ sentence }}</span>
-		</div>
-	{% endfor %}
+		<h3 class="title is-3">Preview</h3>
+		<form id="send-form" action="/send" method="POST">
+		{% for sentence in sentences %}
+			{% if sentence.submitable %}
+				<input type="hidden" name="sentences[{{loop.index0}}]" value="{{sentence.content}}">
+			{% endif %}
+			
+			{% if sentence.bot %}
+				<div class="container" style="margin: .5em 0">
+					<span class="tag bot-says is-medium" style="border-radius: 15px; padding: 0.5em 0.875em; height: auto; white-space: normal;">{{ sentence.content }}</span>
+				</div>
+			{% else %}
+				<div class="container is-pulled-right" style="margin: .5em 0">
+					<span class="tag is-dark is-medium" style="border-radius: 15px; padding: 0.5em 0.875em; height: auto; white-space: normal;">{{ sentence.content }}</span>
+				</div>
+			{% endif %}
+		{% endfor %}
+		</form>
 	</div>
 
-	<div class="column is-offset-1">
-		<p class="control has-icon has-addons">
-			<input class="input" type="text" name="name" placeholder="Search target">
-			<span class="icon is-small">
-				<i class="fa fa-user-circle"></i>
-			</span>
-			<button id="friends" class="button">Search</button>
-		</p>
+	<div class="column is-offset-1 is-4">
+		<h3 class="title is-3">Search contacts</h3>
+		<form id="friends">
+			<p class="control has-icon has-addons">
+				<input class="input" type="text" name="name" placeholder="Search target">
+				<span class="icon is-small">
+					<i class="fa fa-user-circle"></i>
+				</span>
+				<button type="submit" class="button">Search</button>
+			</p>
+		</form>
 
 		<div id="message" class="notification" style="display: none"></div>
 
-		<nav id="friend-list" class="panel" style="display: none"></nav>
-	</div>
-	<div class="column is-12 has-text-centered">
-		<button type="submit" class="button is-large is-primary">
+		<nav id="search-list" style="display: none; margin-bottom: 20px;">
+			<div class="panel"></div>
+			<nav class="pagination">
+				<a id="prev-results" class="pagination-previous is-disabled">Previous</a>
+				<a id="next-results" class="pagination-next">Next</a>
+			</nav>
+		</nav>
+		
+		<div id="friends-list" class="columns is-multiline"></div>
+
+		<button id="send-button" type="submit" class="button is-large is-light is-disabled is-pulled-right">
 			<span>Send</span>
 			<span class="icon is-small">
 				<i class="fa fa-paper-plane"></i>
@@ -34,4 +56,3 @@
 	<script src="static/assets/js/target.js"></script>
 
 {% endblock %}
-
