--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -4,68 +4,64 @@
 	<form class="columns" action="/parse" method="POST">
 		<input type="hidden" name="title" value="{{ content['title'] }}">
 		<input type="hidden" name="summary" value="{{ content['summary'] }}">
+		<input type="hidden" name="url" value="{{ content['url'] }}">
 		{% for image in content['images'] %}
 			<input type="hidden" name="images[{{ loop.index0 }}]" value="{{ image }}">
 		{% endfor %}
 
 		<div id="result" class="column is-7">
+			<strong>Title</strong>
 			<h3 class="title is-3">{{ content['title'] }}</h3>
-			<div class="card">
-				<header class="card-header">
-					<p class="card-header-title">Keywords</p>
-				</header>
-				<div class="card-content">
-					<div class="content">
-					{% for keyword in content['keywords'] %}
-						<span class="tag is-primary">{{ keyword }}</span>
-					{% endfor %}
-					</div>
-				</div>
-			</div>
-			<hr>
 			<div class="notification">
 				<strong>Extract</strong>
 				<p>{{ content['summary'] }}</p>
 			</div>
 			<div class="card">
-				<header class="card-header">
-					<p class="card-header-title">Full content</p>
-					<a class="card-header-icon">
-						<span class="icon"><i class="fa fa-angle-down"></i></span>
-					</a>
-				</header>
 				<div class="card-content">
-					<div class="content">{{ content['content']}}</div>
+					<strong>Keywords</strong>
+					<div class="content">
+					{% for keyword in content['keywords'] %}
+						<span class="tag is-light" style="margin: 2px 2px;">{{ keyword }}</span>
+					{% endfor %}
+					</div>
 				</div>
 			</div>
+			<hr>
+			<a class="button is-primary is-outlined is-pulled-right" href="{{ content['url'] }}" target="_blank">
+				<span>Open original</span>
+				<span class="icon is-small">
+					<i class="fa fa-external-link"></i>
+				</span>
+			</a>
 		</div>
-		<div class="column is-offset-1">
+		<div id="methods" class="column is-offset-1">
 			<h3 class="title is-3">Choose platform</h3>
-			<label class="box">
-				<input type="radio" name="method" value="facebook" style="visibility: hidden; opacity: 0">
+			<label class="box selected" style="border: 1px solid #0085AC">
+				<input type="radio" name="method" value="facebook" style="visibility: hidden; opacity: 0" checked>
 				<span class="icon is-medium"><i class="fa fa-facebook"></i></span>
 				<span>Facebook Messenger</span>
 			</label>
-			<label class="box" style="opacity: 0.6">
+			<label class="box" style="opacity: 0.3">
 				<span class="icon is-medium"><i class="fa fa-twitter"></i></span>
 				<span>Twitter</span>
 			</label>
-			<label class="box" style="opacity: 0.6">
+			<label class="box" style="opacity: 0.3">
 				<span class="icon is-medium"><i class="fa fa-instagram"></i></span>
 				<span>Instagram</span>
 			</label>
-			<label class="box" style="opacity: 0.6">
+			<label class="box" style="opacity: 0.3">
 				<span class="icon is-medium"><i class="fa fa-telegram"></i></span>
 				<span>Telegram</span>
 			</label>
-			<label class="box" style="opacity: 0.6">
+			<label class="box" style="opacity: 0.3">
 				<span class="icon is-medium"><i class="fa fa-snapchat-ghost"></i></span>
 				<span>Snapchat</span>
 			</label>
 			<button class="button is-large is-primary is-fullwidth">
 				<span class="icon is-medium"><i class="fa fa-check"></i></span>
-				<span>Prepare content</span>
+				<span>Preview content</span>
 			</label>
 		</div>
 	</form>
+	<script src="static/assets/js/method.js"></script>
 {% endblock %}
