--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	<div class="column is-6 is-offset-3 has-text-centered">
+	<div class="column has-text-centered">
 		<span class="icon is-large">
 			<i class="fa fa-check"></i>
 		</span>
