--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	<div id="search-form" class="column is-8 is-offset-2">
+	<div id="search-form" class="column is-8-tablet is-12-mobile is-offset-2-tablet">
 		<div class="content is-medium">
 			<ol>
 				<li>Introduce the article url and click <strong>Make the magic</strong>.</li>
