--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,7 +1,7 @@
 {% extends "body.html" %}
 
 {% block content %}
-	<form class="columns" action="/parse" method="POST">
+	<form class="columns is-mobile is-multiline" action="/parse" method="POST">
 		<input type="hidden" name="title" value="{{ content['title'] }}">
 		<input type="hidden" name="summary" value="{{ content['summary'] }}">
 		<input type="hidden" name="url" value="{{ content['url'] }}">
@@ -9,7 +9,13 @@
 			<input type="hidden" name="images[{{ loop.index0 }}]" value="{{ image }}">
 		{% endfor %}
 
-		<div id="result" class="column is-7">
+		<div id="result" class="column is-7-tablet is-12-mobile">
+			<a href="#methods" class="button is-white is-hidden-tablet is-pulled-right">
+				<span class="icon is-small">
+					<i class="fa fa-long-arrow-down"></i>
+				</span>
+				<span>Go to platforms</span>
+			</a>
 			<strong>Title</strong>
 			<h3 class="title is-3">{{ content['title'] }}</h3>
 			<div class="notification">
@@ -34,7 +40,7 @@
 				</span>
 			</a>
 		</div>
-		<div id="methods" class="column is-offset-1">
+		<div id="methods" class="column is-4-desktop is-5-tablet is-12-mobile is-offset-1-desktop">
 			<h3 class="title is-3">Choose platform</h3>
 			<label class="box selected" style="border: 1px solid #0085AC">
 				<input type="radio" name="method" value="facebook" style="visibility: hidden; opacity: 0" checked>
@@ -57,11 +63,12 @@
 				<span class="icon is-medium"><i class="fa fa-snapchat-ghost"></i></span>
 				<span>Snapchat</span>
 			</label>
-			<button class="button is-large is-primary is-fullwidth">
+			<button class="button is-large is-primary is-pulled-right">
 				<span class="icon is-medium"><i class="fa fa-check"></i></span>
 				<span>Preview content</span>
 			</label>
 		</div>
 	</form>
 	<script src="static/assets/js/method.js"></script>
+	<script src="static/assets/js/smooth-scroll.js"></script>
 {% endblock %}
