Icons and metatags

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,16 +1,42 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible" />
 
-		<title>takethejuice.com</title>
+		<title>Take the Juice Demo</title>
+		<meta name="description" content="The platform that helps you teach your students on their own social media.">
+		<meta name="thumbnail" content="/static/assets/img/ico/android-icon-192x192.png" />
+		<link rel="apple-touch-icon" sizes="57x57" href="/static/assets/img/ico/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/static/assets/img/ico/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/static/assets/img/ico/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/ico/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/static/assets/img/ico/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/ico/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/static/assets/img/ico/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/static/assets/img/ico/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/static/assets/img/ico/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="/static/assets/img/ico/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/static/assets/img/ico/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/static/assets/img/ico/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/static/assets/img/ico/favicon-16x16.png">
+		<link rel="manifest" href="/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="/static/assets/img/ico/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+		<PageMap>
+			<DataObject type="thumbnail">
+				<Attribute name="src" value="/static/assets/img/ico/android-icon-192x192.png"/>
+				<Attribute name="width" value="100"/>
+				<Attribute name="height" value="130"/>
+			</DataObject>
+		</PageMap>
 
-		<link rel="stylesheet" href="static/assets/css/main.css">
-		<!-- link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css" -->
+
+		<link rel="stylesheet" href="/static/assets/css/main.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-		<script src="static/vendor/js/jquery-3.1.1.min.js"></script>
+		<script src="/static/vendor/js/jquery-3.1.1.min.js"></script>
 		<script>
 			window.fbAsyncInit = function() { FB.init({ appId: '197401140741778', xfbml: true, version: 'v2.8' }); };
 			(function(d, s, id){
