--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -42,28 +42,28 @@
 		</div>
 		<div id="methods" class="column is-4-desktop is-5-tablet is-12-mobile is-offset-1-desktop">
 			<h3 class="title is-3">Choose platform</h3>
-			<label class="box selected" style="border: 1px solid #0085AC">
+			<label class="box selected" style="border: 1px solid #0085AC" onClick="ga('send', 'event', 'social', 'click', 'facebook');">
 				<input type="radio" name="method" value="facebook" style="visibility: hidden; opacity: 0" checked>
 				<span class="icon is-medium"><i class="fa fa-facebook"></i></span>
 				<span>Facebook Messenger</span>
 			</label>
-			<label class="box" style="opacity: 0.3">
+			<label class="box" style="opacity: 0.3" onClick="ga('send', 'event', 'social', 'click', 'twitter');">
 				<span class="icon is-medium"><i class="fa fa-twitter"></i></span>
 				<span>Twitter</span>
 			</label>
-			<label class="box" style="opacity: 0.3">
+			<label class="box" style="opacity: 0.3" onClick="ga('send', 'event', 'social', 'click', 'instagram');">
 				<span class="icon is-medium"><i class="fa fa-instagram"></i></span>
 				<span>Instagram</span>
 			</label>
-			<label class="box" style="opacity: 0.3">
+			<label class="box" style="opacity: 0.3" onClick="ga('send', 'event', 'social', 'click', 'telegram');">
 				<span class="icon is-medium"><i class="fa fa-telegram"></i></span>
 				<span>Telegram</span>
 			</label>
-			<label class="box" style="opacity: 0.3">
+			<label class="box" style="opacity: 0.3" onClick="ga('send', 'event', 'social', 'click', 'snapchat');">
 				<span class="icon is-medium"><i class="fa fa-snapchat-ghost"></i></span>
 				<span>Snapchat</span>
 			</label>
-			<button class="button is-large is-primary is-pulled-right">
+			<button class="button is-large is-primary is-pulled-right" onClick="ga('send', 'event', 'extract', 'click', 'preview');">
 				<span class="icon is-medium"><i class="fa fa-check"></i></span>
 				<span>Preview content</span>
 			</label>
