--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 					<input class="input is-large" type="text" name="url" placeholder="Insert resource url here!">
 				</p>
 				<p class="has-text-centered">
-					<button type="submit" class="button is-large is-primary">
+					<button type="submit" class="button is-large is-primary" onClick="ga('send', 'event', 'inicio', 'click', 'magicButton');">
 						<span class="icon is-small">
 							<i class="fa fa-magic"></i>
 						</span>
