--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -54,6 +54,7 @@
 			ga('create', 'UA-92654268-1', 'auto');
 			ga('send', 'pageview');
 		</script>
+		<script src="static/assets/js/main.js"></script>
 	</head>
 	<body>
 		{% block body %}{% endblock %}
