Routes renamed and GA fail again

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 				<li>Preview the content and send it to their profiles.</li>
 			</ol>
 		</div>
-		<form action="/" method="POST">
+		<form action="/preview" method="POST">
 				<p class="control">
 					<input class="input is-large" type="text" name="url" placeholder="Insert resource url here!">
 				</p>
@@ -24,5 +24,4 @@
 				</p>
 		</form>
 	</div>
-	<script src="static/assets/js/main.js"></script>
 {% endblock %}
