--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,7 +31,6 @@
 			</DataObject>
 		</PageMap>
 
-
 		<link rel="stylesheet" href="/static/assets/css/main.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -51,9 +50,10 @@
 				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-			ga('create', 'UA-92654268-1', 'auto');
-			ga('send', 'pageview');
+			window.ga('create', 'UA-92654268-1', 'auto');
+			window.ga('send', 'pageview');
 		</script>
+		<script src="static/assets/js/main.js"></script>
 	</head>
 	<body>
 		{% block body %}{% endblock %}
