--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
 
 	<div id="search-form" class="column is-8-tablet is-12-mobile is-offset-2-tablet">
 		<div class="content is-medium">
+			<h3 class="title is-3">Hello <span id="username"></span>!</h3>
 			<ol>
 				<li>Introduce the article url and click <strong>Make the magic</strong>.</li>
 				<li>Select a social network.</li>
@@ -24,4 +25,5 @@
 				</p>
 		</form>
 	</div>
+	<script src="static/assets/js/index.js"></script>
 {% endblock %}
