--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -17,6 +17,7 @@
 				<form method="POST" action="/login">
 					<input type="hidden" id="userid-input" name="userid">
 					<input type="hidden" id="accesstoken-input" name="accesstoken">
+					<input type="hidden" id="name-input" name="name">
 					<input type="hidden" id="email-input" name="email">
 					<button id="login-btn" class="button is-large is-primary">
 						<span class="icon is-medium">
