--- a/app/templates/preview.html
+++ b/app/templates/preview.html
@@ -26,6 +26,7 @@
 				<div class="card-content">
 					<strong>Keywords</strong>
 					<div class="content">
+					<input type="hidden" name="raw_keywords" value="{{content['raw_keywords']}}" />
 					{% for keyword in content['keywords'] %}
 						<span class="tag is-light" style="margin: 2px 2px;">{{ keyword }}</span>
 					{% endfor %}
@@ -42,14 +43,15 @@
 		</div>
 		<div id="methods" class="column is-4-desktop is-5-tablet is-12-mobile is-offset-1-desktop">
 			<h3 class="title is-3">Choose platform</h3>
-			<label class="box selected" style="border: 1px solid #0085AC" onClick="ga('send', 'event', 'social', 'click', 'facebook');">
-				<input type="radio" name="method" value="facebook" style="visibility: hidden; opacity: 0" checked>
-				<span class="icon is-medium"><i class="fa fa-facebook"></i></span>
-				<span>Facebook Messenger</span>
-			</label>
-			<label class="box" style="opacity: 0.3" onClick="ga('send', 'event', 'social', 'click', 'twitter');">
+			<label class="box" style="border: 3px solid #0085AC" onClick="ga('send', 'event', 'social', 'click', 'twitter');">
+				<input type="radio" name="method" value="twitter" style="visibility: hidden; opacity: 0" checked>
 				<span class="icon is-medium"><i class="fa fa-twitter"></i></span>
 				<span>Twitter</span>
+			</label>
+			<label class="box selected" onClick="ga('send', 'event', 'social', 'click', 'facebook');">
+				<input type="radio" name="method" value="facebook" style="visibility: hidden; opacity: 0">
+				<span class="icon is-medium"><i class="fa fa-facebook"></i></span>
+				<span>Facebook Messenger</span>
 			</label>
 			<label class="box" style="opacity: 0.3" onClick="ga('send', 'event', 'social', 'click', 'instagram');">
 				<span class="icon is-medium"><i class="fa fa-instagram"></i></span>
