--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -3,15 +3,16 @@
 {% block content %}
 
 	<div class="column has-text-centered">
-		<span class="icon is-large">
-			<i class="fa fa-check"></i>
-		</span>
-		<h1 class="title is-1">Success!</h1>
+		<h1 class="title is-1">Great!</h1>
+		<h2 class="title is-3">Your campaign is in the send queue.</h2>
+		<p><strong>REMEMBER THIS IS JUST A DEMO</strong></p>
+		<p>No animals were harmed in the making of this demo<br/>and no messages were sent either :D</p>
+		<br/>
 		<a href="/" class="button is-primary is-outlined">
 			<span class="icon is-small">
 				<i class="fa fa-home"></i>
 			</span>
-			<span>Home</span>
+			<span>Go back to home</span>
 		</a>
 	</div>
 
