--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -18,7 +18,48 @@
     border-radius: 50%;
     border: 1px solid #ddd; }
 
-/*! bulma.io v0.3.1 | MIT License | github.com/jgthms/bulma */
+.hashtag, .link {
+  color: #0085AC;
+  cursor: pointer; }
+
+.contacts {
+  display: inline-block;
+  vertical-align: top; }
+  .contacts .contact {
+    text-align: center; }
+    .contacts .contact input {
+      opacity: 0;
+      visibility: hidden; }
+      .contacts .contact input:checked + label .picture .icon::before {
+        content: '\f05d'; }
+    .contacts .contact label {
+      cursor: pointer; }
+      .contacts .contact label .picture {
+        position: relative; }
+        .contacts .contact label .picture .icon {
+          position: absolute;
+          top: 5px;
+          left: 5px;
+          width: 33px;
+          height: 33px;
+          line-height: 35px;
+          border-radius: 50%;
+          background: white;
+          color: #0085AC;
+          font-size: 30px; }
+          .contacts .contact label .picture .icon::before {
+            content: '\f10c'; }
+        .contacts .contact label .picture img {
+          width: 100%;
+          border-radius: 50%;
+          max-width: 200px;
+          transition: all .2s ease-in-out; }
+          .contacts .contact label .picture img:hover {
+            box-shadow: 0px 0px 30px -7px black; }
+      .contacts .contact label span {
+        font-size: 20px; }
+
+/*! bulma.io v0.3.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
