--- a/app/static/assets/css/main.sass
+++ b/app/static/assets/css/main.sass
@@ -23,4 +23,53 @@ $primary: #0085AC;
 	}
 }
 
+.hashtag, .link {
+	color: $primary;
+	cursor: pointer;
+}
+
+.contacts {
+	display: inline-block;
+	vertical-align: top;
+
+	.contact {
+		text-align: center;
+		input {
+			opacity: 0;
+			visibility: hidden;
+			&:checked + label .picture .icon::before {content: '\f05d';}
+		}
+
+		label {
+			cursor: pointer;
+
+			.picture {
+				position: relative;
+				.icon {
+					position: absolute;
+					top: 5px; left: 5px;
+					width: 33px;
+					height: 33px;
+
+					line-height: 35px;
+					border-radius: 50%;
+					background: white;
+					color: $primary;
+					font-size: 30px;
+					
+					&::before {content: '\f10c';}
+				}
+				img {
+					width: 100%;
+					border-radius: 50%;
+					max-width: 200px;
+					transition: all .2s ease-in-out;
+					&:hover {box-shadow: 0px 0px 30px -7px rgba(0,0,0,1);}
+				}
+			}
+			span {font-size: 20px;}
+		}	
+	}
+}
+
 @import "../../vendor/css/bulma/bulma"
