--- a/app/templates/targets.html
+++ b/app/templates/targets.html
@@ -1,43 +1,45 @@
 {% extends "body.html" %}
 
 {% block content %}
-	<div class="column is-12-tablet is-12-mobile">
-		<h3 class="title is-3">Preview</h3>
-		<form id="send-form" action="/send" method="POST">
-		{% for tweet in tweets %}
-			<input type="hidden" name="sentences[{{loop.index0}}]" value="{{tweet.content}}">
-			<div class="box">
-				<article class="media">
-					<div class="media-left">
-						<figure class="image is-64x64">
-							<img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-						</figure>
-					</div>
-					<div class="media-content">
-						<div class="content">
-							<p><strong>takethejuice</strong> <small>@take_thejuice</small></p>
-							<p>{{tweet.content}}</p>
-						</div>
-						<nav class="level">
-							<div class="level-left">
-								<a class="level-item"><span class="icon is-small"><i class="fa fa-reply"></i></span></a>
-								<a class="level-item"><span class="icon is-small"><i class="fa fa-retweet"></i></span></a>
-								<a class="level-item"><span class="icon is-small"><i class="fa fa-heart"></i></span></a>
-							</div>
-						</nav>
-					</div>
-				</article>
+	<form id="send-form" class="column is-12" action="/send" method="POST">
+		<div class="columns columns is-mobile is-multiline">
+			<div class="column is-7-tablet is-12-mobile">
+				<a href="#contacts-section" class="button is-white is-hidden-tablet is-pulled-right">
+					<span class="icon is-small">
+						<i class="fa fa-long-arrow-down"></i>
+					</span>
+					<span>Select contacts</span>
+				</a>
+				<h3 class="title is-3">Preview</h3>
+				{% block target %}{% endblock %}
 			</div>
-		{% endfor %}
-		</form>
-		
-		<button id="send-button" type="submit" class="button is-large is-light is-disabled is-pulled-right" onClick="ga('send', 'event', 'final', 'click', 'send');">
-			<span>Publish</span>
-			<span class="icon is-small">
-				<i class="fa fa-paper-plane"></i>
-			</span>
-		</button>
-	</div>
+			<div id="contacts-section" class="column is-4-desktop is-5-tablet is-12-mobile is-offset-1-desktop">
+				<h3 class="title is-3">Select contacts</h3>
+				<div class="contacts columns is-mobile is-multiline">
+					{% for contact in contacts %}
+					<div class="contact column is-4">
+						<input type="checkbox" id="contact{{loop.index0}}" value="{{contact.name}}">
+						<label for="contact{{loop.index0}}">
+							<div class="picture">
+								<i class="icon fa fa-circle-o"></i>
+								<i class="icon fa fa-check-circle-o"></i>
+								<img src="{{contact.picture}}"/>
+							</div>
+							<span>{{contact.name}}</span>
+						</label>
+					</div>
+					{% endfor %}
+				</div>
+
+				<button id="send-button" type="submit" class="button is-large is-primary is-pulled-right" onClick="ga('send', 'event', 'final', 'click', 'send');">
+					<span>Start campaign</span>
+					<span class="icon is-small">
+						<i class="fa fa-paper-plane"></i>
+					</span>
+				</button>
+			</div>
+		</div>
+	</form>
 	<script src="/static/assets/js/target.js"></script>
 	<script src="/static/assets/js/smooth-scroll.js"></script>
 
