--- a/app/templates/twitter.html
+++ b/app/templates/twitter.html
@@ -1,72 +1,33 @@
-{% extends "body.html" %}
+{% extends "targets.html" %}
 
-{% block content %}
-	<form id="send-form" class="column is-12" action="/send" method="POST">
-		<div class="columns columns is-mobile is-multiline">
-			<div class="column is-7-tablet is-12-mobile">
-				<a href="#contacts-section" class="button is-white is-hidden-tablet is-pulled-right">
-					<span class="icon is-small">
-						<i class="fa fa-long-arrow-down"></i>
-					</span>
-					<span>Select contacts</span>
-				</a>
-				<h3 class="title is-3">Preview</h3>
-				{% for tweet in tweets %}
-					<input type="hidden" name="sentences" value="{{tweet.content}}">
-					<small>Will be sent in {{tweet.hour}} hours </small>
-					<div class="box">
-						<article class="media">
-							<div class="media-left">
-								<figure class="image is-64x64">
-									<img src="static/assets/img/face.png" alt="Image">
-								</figure>
-							</div>
-							<div class="media-content">
-								<div class="content">
-									<span><strong>takethejuice</strong> <small>@take_thejuice</small></span>
-									<div>
-										{{tweet.content}}
-										{% if tweet.link %}
-											<span class="link">{{tweet.link}}</span>
-										{% endif %}
-										{% for tag in tweet.tags %}
-											<span class="hashtag">#{{tag}}</span>
-										{% endfor %}
-									</div>
-								</div>
-							</div>
-						</article>
-					</div>
-				{% endfor %}
-			</div>
-			<div id="contacts-section" class="column is-4-desktop is-5-tablet is-12-mobile is-offset-1-desktop">
-				<h3 class="title is-3">Select contacts</h3>
-				<div class="contacts columns is-mobile is-multiline">
-					{% for contact in contacts %}
-					<div class="contact column is-4">
-						<input type="checkbox" id="contact{{loop.index0}}" value="{{contact.name}}">
-						<label for="contact{{loop.index0}}">
-							<div class="picture">
-								<i class="icon fa fa-circle-o"></i>
-								<i class="icon fa fa-check-circle-o"></i>
-								<img src="{{contact.picture}}"/>
-							</div>
-							<span>{{contact.name}}</span>
-						</label>
-					</div>
-					{% endfor %}
+{% block target %}
+
+	{% for tweet in tweets %}
+		<input type="hidden" name="sentences" value="{{tweet.content}}">
+		<small>Will be sent in {{tweet.hour}} hours </small>
+		<div class="box">
+			<article class="media">
+				<div class="media-left">
+					<figure class="image is-64x64">
+						<img src="static/assets/img/face.png" alt="Image">
+					</figure>
 				</div>
-
-				<button id="send-button" type="submit" class="button is-large is-primary is-pulled-right" onClick="ga('send', 'event', 'final', 'click', 'send');">
-					<span>Start campaign</span>
-					<span class="icon is-small">
-						<i class="fa fa-paper-plane"></i>
-					</span>
-				</button>
-			</div>
+				<div class="media-content">
+					<div class="content">
+						<span><strong>takethejuice</strong> <small>@take_thejuice</small></span>
+						<div>
+							{{tweet.content}}
+							{% if tweet.link %}
+								<span class="link">{{tweet.link}}</span>
+							{% endif %}
+							{% for tag in tweet.tags %}
+								<span class="hashtag">#{{tag}}</span>
+							{% endfor %}
+						</div>
+					</div>
+				</div>
+			</article>
 		</div>
-	</form>
-	<script src="/static/assets/js/target.js"></script>
-	<script src="/static/assets/js/smooth-scroll.js"></script>
+	{% endfor %}
 
 {% endblock %}
