--- a/app/templates/errors.html
+++ b/app/templates/errors.html
@@ -3,8 +3,16 @@
 {% block content %}
 
 	<div class="column has-text-centered">
-		<h1 class="title is-1">Great!</h1>
-		<h2 class="title is-3">Your campaign is in the send queue.</h2>
+		<h1 class="title is-1">Oops!</h1>
+		<h2 class="title is-3">Something was wrong with {{errors|length}} users :(</h2>
+		<ul>
+			{% for error in errors %}
+				<li><b>{{error.user}}: </b>{{error.exception}}</li>
+			{% endfor %}
+		</ul>
+		<br/>
+		<br/>
+
 		<p><strong>REMEMBER THIS IS JUST A DEMO</strong></p>
 		<br/>
 		<a href="/" class="button is-primary is-outlined">
@@ -16,4 +24,5 @@
 	</div>
 
 {% endblock %}
+
 
