--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -7,11 +7,11 @@
 		<h2 class="title is-3">Your campaign is in the send queue.</h2>
 		<p><strong>REMEMBER THIS IS JUST A DEMO</strong></p>
 		<br/>
-		<a href="/" class="button is-primary is-outlined">
+		<a href="https://beeva-innovation.typeform.com/to/VaXnjC" target="_blank" class="button is-primary is-outlined">
 			<span class="icon is-small">
-				<i class="fa fa-home"></i>
+				<i class="fa fa-hastag"></i>
 			</span>
-			<span>Go back to home</span>
+			<span>ACCESS BETA TESTERS PROGRAM</span>
 		</a>
 	</div>
 
