Feedback form link

--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -8,10 +8,7 @@
 		<p><strong>REMEMBER THIS IS JUST A DEMO</strong></p>
 		<br/>
 		<a href="https://beeva-innovation.typeform.com/to/VaXnjC" target="_blank" class="button is-primary is-outlined">
-			<span class="icon is-small">
-				<i class="fa fa-hastag"></i>
-			</span>
-			<span>ACCESS BETA TESTERS PROGRAM</span>
+			ACCESS BETA TESTERS PROGRAM
 		</a>
 	</div>
 
