New code structure

--- a/app/templates/errors.html
+++ b/app/templates/errors.html
@@ -15,7 +15,7 @@
 
 		<p><strong>REMEMBER THIS IS JUST A DEMO</strong></p>
 		<br/>
-		<a href="https://beeva-innovation.typeform.com/to/VaXnjC" target="_blank" class="button is-primary is-outlined">
+		<a href="https://beeva-innovation.typeform.com/to/VaXnjC" target="_blank" class="button is-primary">
 			ACCESS BETA TESTERS PROGRAM
 		</a>
 	</div>
