--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -7,7 +7,7 @@
 		<h2 class="title is-3">Your campaign is in the send queue.</h2>
 		<p><strong>REMEMBER THIS IS JUST A DEMO</strong></p>
 		<br/>
-		<a href="https://beeva-innovation.typeform.com/to/VaXnjC" target="_blank" class="button is-primary is-outlined">
+		<a href="https://beeva-innovation.typeform.com/to/VaXnjC" target="_blank" class="button is-primary">
 			ACCESS BETA TESTERS PROGRAM
 		</a>
 	</div>
