Las changes 'berry' version

--- a/templates/download.html
+++ b/templates/download.html
@@ -18,12 +18,11 @@
 	</div>
 
 	<div class="wrapper">
-		<div class="download">
+		<div id="downloadable" class="download">
 			<span class="icon">
-				<i class="fa fa-times" aria-hidden="true"></i>
+				<i class="fa fa-check" aria-hidden="true"></i>
 			</span>
-			<h3>Something was wrong... :(</h3>
-			<a class="button" href="/pills?query={{query}}&force=True">Try other format!</a>
+			<h3>Thanks for download!</h3>
 		</div>
 	</div>
 {% endblock %}
