--- a/templates/soon.html
+++ b/templates/soon.html
@@ -20,9 +20,9 @@
 	<div class="wrapper">
 		<div class="download">
 			<span class="icon">
-				<i class="fa fa-times" aria-hidden="true"></i>
+				<i class="fa fa-clock-o" aria-hidden="true"></i>
 			</span>
-			<h3>Something was wrong... :(</h3>
+			<h3>The {{format}} is not avalible yet... But we still working on it :)</h3>
 			<a class="button" href="/pills?query={{query}}&force=True">Try other format!</a>
 		</div>
 	</div>
