--- a/templates/targets.html
+++ b/templates/targets.html
@@ -1,46 +1,39 @@
-{% extends "body.html" %}
+{% extends "base.html" %}
 
-{% block content %}
-	<form id="send-form" class="column is-12" action="/send" method="POST">
-		<div class="columns columns is-mobile is-multiline">
-			<div class="column is-7-tablet is-12-mobile">
-				<a href="#contacts-section" class="button is-white is-hidden-tablet is-pulled-right">
-					<span class="icon is-small">
-						<i class="fa fa-long-arrow-down"></i>
+{% block body %}
+	<div class="steps">
+		<div class="buttons">
+			<div class="side left">
+				<a class="button outline go-back" href="/pills?query={{data.name}}">
+					<span class="icon">
+						<i class="fa fa-arrow-left"></i>
 					</span>
-					<span>Select demo contacts</span>
+					Return to timeline pills
+					<span class="icon">
+						<i class="fa fa-list-ul"></i>
+					</span>
 				</a>
-				<h3 class="title is-3">Preview</h3>
-				{% block target %}{% endblock %}
 			</div>
-			<div id="contacts-section" class="column is-4-desktop is-5-tablet is-12-mobile is-offset-1-desktop">
-				<h3 class="title is-3">Select contacts</h3>
-				<div class="contacts columns is-mobile is-multiline">
-					{% for contact in contacts %}
-					<div class="contact column is-4">
-						<input type="checkbox" id="contact{{loop.index0}}" name="contacts" value="{{contact.twitter}}">
-						<label for="contact{{loop.index0}}">
-							<div class="picture">
-								<i class="icon fa fa-circle-o"></i>
-								<i class="icon fa fa-check-circle-o"></i>
-								<img src="{{contact.picture}}"/>
-							</div>
-							<span>{{contact.name}}</span>
-						</label>
-					</div>
-					{% endfor %}
-				</div>
-
-				<button id="send-button" type="submit" class="button is-large is-primary is-pulled-right" onClick="ga('send', 'event', 'final', 'click', 'send');">
-					<span>Start campaign</span>
-					<span class="icon is-small">
-						<i class="fa fa-paper-plane"></i>
+			<div class="side right">
+				<a id="download" class="button" href="/download">
+					<span class="icon">
+						<i class="fa fa-download"></i>
 					</span>
-				</button>
+					Go to download
+					<span class="icon">
+						<i class="fa fa-arrow-right"></i>
+					</span>
+				</a>
 			</div>
 		</div>
-	</form>
-	<script src="/static/assets/js/target.js"></script>
-	<script src="/static/assets/js/smooth-scroll.js"></script>
+	</div>
 
+	<div class="targets wrapper columns">
+		<div class="preview left-col">
+			{% block preview %}{% endblock %}
+		</div>
+		<div class="contacts right-col">
+			{% include "contacts.html" %}
+		</div>
+	</div>
 {% endblock %}
