fill hits with wikimedia and wikipedia images

--- a/templates/pills.html
+++ b/templates/pills.html
@@ -6,7 +6,7 @@
 		<div class="steps">
 			<div class="buttons">
 				<div class="side left">
-					<a class="button outline go-back" href="/?query={{title}}">
+					<a class="button outline go-back" href="/">
 						<span class="icon">
 							<i class="fa fa-arrow-left"></i>
 						</span>
