--- a/static/style/style.css
+++ b/static/style/style.css
@@ -80,9 +80,11 @@ body {
 	vertical-align: top;
 	width: 100%;
 	height: auto;
+	text-align: center;
 }
 
 .search-form form {
+	max-width: 640px;
 	margin: 30px 0;
 	font-size: 0;
 }
@@ -91,19 +93,24 @@ body {
 	display: inline-block;
 	vertical-align: top;
 	width: 65%;
-	height: auto;
+	height: 50px;
 	margin: 0 5% 0 0;
 	padding: 10px 20px;
 	border: 1px solid #dddddd;
-	color: #007b9f;
+	color: #333333;
 	font-size: 16px;
 	font-weight: bold;
 	font-family: 'Raleway', sans-serif;
 	outline: none;
 	box-sizing: border-box;
+	box-shadow: 0px 5px 3px #f2f2f2 ;
 }
 
-.search-form form .button {width: 30%;}
+.search-form form .button {
+	width: 30%;
+	height: 50px;
+	box-shadow: 0px 5px 3px #f2f2f2;
+}
 
 .search-form .results {
 	display: inline-block;
