--- a/templates/search.html
+++ b/templates/search.html
@@ -8,12 +8,12 @@
 				<span class="icon">
 					<i class="fa fa-search"></i>
 				</span>
-				Search
+				Buscar
 			</button>
 		</form>
 		{% if results %}
 		<div class="results">
-			<p class="results-message">Results including the term "<i>{{query}}</i>":</p>
+			<p class="results-message">Lo siento, pero no te he entendido bien. Esto es lo que he encontrado con "<i>{{query}}</i>":</p>
 			<ul class="results-list">
 				{% for result in results %}
 					<li class="item">
