--- a/templates/download.html
+++ b/templates/download.html
@@ -1,28 +1,14 @@
 {% extends "base.html" %}
 
 {% block body %}
-	<div class="steps">
-		<div class="buttons">
-			<div class="side left">
-				<a class="button outline go-back" href="/pills?query={{query}}&force=True">
-					<span class="icon">
-						<i class="fa fa-arrow-left"></i>
-					</span>
-					Return to timeline
-					<span class="icon">
-						<i class="fa fa-list-ul"></i>
-					</span>
-				</a>
-			</div>
-		</div>
-	</div>
-
 	<div class="wrapper">
 		<div id="downloadable" class="download">
 			<span class="icon">
 				<i class="fa fa-check" aria-hidden="true"></i>
 			</span>
-			<h3>Thanks for download!</h3>
+			<h3>Done!</h3>
+			<span class="content">Your {{ format }} is ready:</span>
+			<a href="{{ url }}" target="_blank" class="url">{{ url }}</a>
 		</div>
 	</div>
 {% endblock %}
