--- a/templates/error.html
+++ b/templates/error.html
@@ -1,29 +1,13 @@
 {% extends "base.html" %}
 
 {% block body %}
-	<div class="steps">
-		<div class="buttons">
-			<div class="side left">
-				<a class="button outline go-back" href="/pills?query={{query}}&force=True">
-					<span class="icon">
-						<i class="fa fa-arrow-left"></i>
-					</span>
-					Return to timeline
-					<span class="icon">
-						<i class="fa fa-list-ul"></i>
-					</span>
-				</a>
-			</div>
-		</div>
-	</div>
-
 	<div class="wrapper">
 		<div class="download">
 			<span class="icon">
 				<i class="fa fa-times" aria-hidden="true"></i>
 			</span>
-			<h3>Something was wrong... :(</h3>
-			<a class="button" href="/pills?query={{query}}&force=True">Try other format!</a>
+			<h3 class="title">Something was wrong... :(</h3>
+			<a class="button" href="/">Try again!</a>
 		</div>
 	</div>
 {% endblock %}
