--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
 		</form>
 		{% if results %}
 		<div class="results">
-			<p class="results-message">Lo siento, pero no te he entendido bien. Esto es lo que he encontrado con "<i>{{query}}</i>":</p>
+			<p class="results-message">¡Genial! Tengo varios resultados para <i>{{query}}</i>. Elige el que quieras:</p>
 			<ul class="results-list">
 				{% for result in results %}
 					<li class="item">
