--- a/static/style/infographic.css
+++ b/static/style/infographic.css
@@ -53,7 +53,7 @@ body {
 	width: 25%;
     margin-right: 5%;
 
-	background-position: center;
+	background-position: top center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	border: 5px solid white;
