--- a/static/style/style.css
+++ b/static/style/style.css
@@ -132,18 +132,20 @@ body {
 
 .search-form .results .results-message {
 	font-size: 20px;
+	text-align: left;
 }
 
 .search-form .results .results-list {
 	font-size: 0;
 	margin: 20px 0;
+	text-align: left;
 }
 
 .search-form .results .results-list .item {
 	display: inline-block;
 	vertical-align: top;
-	width: 33.333%;
-	padding: 10px 5px;
+	width: 100%;
+	margin: 10px 0;
 	height: auto;
 }
 
@@ -153,7 +155,7 @@ body {
 	height: auto;
 	position: relative;
 	width: 100%;
-	padding: 10px 10% 30px;
+	padding: 10px 5%;
 	color: #111;
 	text-decoration: none;
 	font-size: 16px;
@@ -168,7 +170,6 @@ body {
 
 .search-form .results .results-list .item a b {
 	display: block;
-	margin-bottom: 10px;
 	font-size: 20px;
 }
 
